<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditTextPreference
        android:title="@string/pre_location_label"
        android:key="@string/pre_location_key"
        android:defaultValue="@string/pre_location_default"
        android:singleLine="true"
        android:inputType="text"
        />

    <ListPreference
        android:key="@string/pref_units_key"
        android:title="@string/pref_units_title"
        android:dialogTitle="@string/pref_units_dialogTitle"
        android:entries="@array/pref_unit_entries"
        android:entryValues="@array/pref_unit_values"
        android:defaultValue="@string/pref_units_default" />

</PreferenceScreen>